src/test/resources/typeSystemTestModels/valid/methods/MethodAbstractAndOtherModifiers.java
package typeSystemTestModels.valid.methods;

public abstract class MethodAbstractAndOtherModifiers {

  public abstract String getName();
}