src/test/resources/typeSystemTestModels/invalid/constructors/ConstructorNoDuplicateModifier.java
package typeSystemTestModels.invalid.constructors;

public class ConstructorNoDuplicateModifier {

  public public ConstructorNoDuplicateModifier(){

  }
}